[package]
name = "b-table"
version = "0.2.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "A persistent database table based on b-tree"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/b-table"

keywords = ["persistent", "ordered", "indexed", "relational", "table"]
categories = ["database", "database-implementations", "data-structures"]

[features]
all = ["logging", "stream"]
logging = ["log", "b-tree/logging", "freqfs/logging"]
stream = ["async-trait", "b-tree/stream", "destream/smallvec"]

[[example]]
name = "example"
required-features = ["stream"]

[dependencies]
async-trait = { version = "0.1", optional = true }
b-tree = { path = "../b-tree" }
destream = { version = "~0.7.1", optional = true }
freqfs = { path = "../freqfs" }
futures = "0.3"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
num_cpus = "1.16"
pin-project = "1.1"
safecast = "0.2"
smallvec = "1.11"

[dev-dependencies]
destream = "0.7"
destream_json = { path = "../destream_json", features = ["value"] }
number-general = { path = "../number-general" }
rand = "0.8"
tokio = { version = "1.33", features = ["macros"] }
